--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.50.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "generate": "^0.14.0",
     "lucide-react": "^0.516.0",
     "next": "15.3.3",
     "react": "^19.0.0",
